# ridiculous

./: .gitignore  Cargo.toml  README.md  build_gui_app.sh
.github/workflows/: release.yml
Ridiculous.app/Contents/: Info.plist
Ridiculous.app/Contents/MacOS/: ridiculous  ridiculous-cli
scripts/: build.sh  get_ridi_credentials.sh  ridiculous_gui_enhanced.sh
src/: credential_manager.rs  gui.rs  lib.rs  library_finder.rs  main.rs  test.rs  types.rs
