[package]
name = "ridiculous"
version = "0.3.0"
edition = "2021"
authors = ["Floorswww"]
description = "Enhanced RIDI book decryption tool with batch processing and GUI support"
license = "MIT"
repository = "https://github.com/Some-0ne/ridiculous"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
miette = { version = "5.0", features = ["fancy"] }

# CLI and config
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Progress bars and UI
indicatif = { version = "0.17", features = ["tokio"] }
console = "0.15"

# File system and paths
dirs = "5.0"
walkdir = "2.0"

# Cryptography (original RIDI decryption)
aes = "0.8"
cbc = "0.1"

# Text processing
regex = "1.0"

# Windows registry (Windows only)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# Optional GUI dependencies
egui = { version = "0.24", optional = true }
eframe = { version = "0.24", optional = true }

# Development dependencies
[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[features]
default = []
gui = ["egui", "eframe"]

[[bin]]
name = "ridiculous"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"